<resources>
    <string name="app_name">Grocery List</string>
    <string name="group_II">Group II</string>
    <string name="app">App</string>
    <string name="email">EMAIL</string>
    <string name="password">Enter your password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="helper_text">Helper text</string>
    <string name="password_characters">At least 8 characters</string>
    <string name="name">NAME</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="scan_qr_code">SCAN QR CODE</string>
    <string name="contact_sign_up">You are signing up a contact of</string>
    <string name="update_name">Update Name</string>
    <string name="update">update</string>
    <string name="please_enter_your_email_address">Enter your email address</string>
    <string name="please_enter_your_full_name">Enter your full name</string>
    <string name="search_item">   Search Item</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="more_item_description">More Item Description</string>
    <string name="FLAVOR_VARIANT">FLAVOR/VARIANT</string>
    <string name="PRICE_PER_UNIT">PRICE/UNIT</string>
    <string name="details">DETAILS</string>
    <string name="add_item_to_list">Add Item to List</string>
    <string name="save">SAVE</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="provide_item_details">Provide Item Details</string>
    <string name="price_per_unit">Price per Unit</string>
    <string name="quantity">QUANTITY</string>
    <string name="flavor_variant">Flavor/Variant</string>
    <string name="page_header">Page Header</string>
    <string name="new_password_blank_for_no_changes">NEW PASSWORD (Blank if no changes)</string>
    <string name="old_password">OLD PASSWORD (Blank if no changes)</string>
    <string name="add_contact">Add Contact</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>