<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <include
        android:id="@+id/page_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/common_page_header"
        app:layout_constraintBottom_toBottomOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        tools:visibility="visible" />



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_account_circle"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/glTop"/>

    <ImageView
        android:id="@+id/ivCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toTopOf="@id/profile_image"
        app:srcCompat="@android:drawable/ic_menu_camera"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".95" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_background"
        android:gravity="start|top"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="50dp"
        android:padding="10dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/grey_500"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        tools:layout_editor_absoluteY="186dp"
        android:editable="false" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helper_text"
        android:textSize="14sp"
        android:textColor="@color/grey_500"
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="@id/glStart" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:background="@drawable/edittext_background"
        android:layout_marginTop="36dp"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:minHeight="50dp"
        android:padding="10dp"
        android:textSize="15sp"
        android:textColor="@color/grey_500"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        android:gravity="start|top"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helper_text"
        android:textSize="14sp"
        android:textColor="@color/grey_500"
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintStart_toStartOf="@id/glStart" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etOldPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/old_password"
        android:background="@drawable/edittext_background"
        android:layout_marginTop="36dp"
        android:inputType="textPassword"
        android:minHeight="50dp"
        android:padding="10dp"
        android:textColor="@color/grey_500"
        android:textSize="15sp"
        android:drawableEnd="@drawable/ic_view_password"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        android:gravity="start|top"/>

    <TextView
        android:id="@+id/tvOldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_characters"
        android:textSize="14sp"
        android:textColor="@color/grey_500"
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/etOldPassword"
        app:layout_constraintStart_toStartOf="@id/glStart" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_blank_for_no_changes"
        android:background="@drawable/edittext_background"
        android:layout_marginTop="36dp"
        android:inputType="textPassword"
        android:minHeight="50dp"
        android:padding="10dp"
        android:textColor="@color/grey_500"
        android:textSize="15sp"
        android:drawableEnd="@drawable/ic_view_password"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/etOldPassword"
        android:gravity="start|top"/>

    <TextView
        android:id="@+id/tvNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_characters"
        android:textSize="14sp"
        android:textColor="@color/grey_500"
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/etNewPassword"
        app:layout_constraintStart_toStartOf="@id/glStart" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdate"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/signin_button_border"
        android:gravity="center"
        android:text="@string/update"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintEnd_toStartOf="@id/btnSignOut"
        app:layout_constraintTop_toBottomOf="@+id/etNewPassword"
        android:layout_marginRight="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignOut"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/signout_button_border"
        android:gravity="center"
        android:text="SIGN OUT"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@+id/etNewPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>